syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/x/gitopia/types";

import "gogoproto/gogo.proto";

message User {
  string creator = 1;
  uint64 id = 2;
  string username = 3; 
  string usernameGithub = 4; 
  string avatarUrl = 5; 
  repeated string followers = 6; 
  repeated string following = 7; 
  repeated UserRepository repositories = 8;
  repeated UserOrganization organizations = 9; 
  repeated uint64 starred_repos = 10; 
  string subscriptions = 11; 
  string email = 12; 
  string bio = 13; 
  int64 createdAt = 14; 
  int64 updatedAt = 15; 
  string extensions = 16; 
}

message UserRepository {
  string name = 1;
  uint64 id = 2;
}

message UserOrganization {
  string name = 1;
  string id = 2;
}
